<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnLlamadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cargarFila"
            android:text="Cargar" />

        <Button
            android:id="@+id/BtnEscribir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="escribirFilaEjemplo"
            android:text="@string/escribir" />

        <Button
            android:id="@+id/BtnEliminarLlamadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminarFilasEjemplo"
            android:text="@string/eliminarFilasEjemplo" />

        <Button
            android:id="@+id/BtnEliminarLlamada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminarFila"
            android:text="@string/eliminarFila" />

        <Button
            android:id="@+id/BtnModificarLlamadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificarFilasEjemplo"
            android:text="@string/modificarFilasEjemplo" />

        <Button
            android:id="@+id/BtnModificarLlamada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificarFila"
            android:text="@string/modificarFila" />

        <Button
            android:id="@+id/BtnLlamadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="llamadas"
            android:text="@string/llamadas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="ID"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Teléfono"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextDuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Duración en segundos"
                android:inputType="number" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radioButtonEntrada"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonEntrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Entrada" />

                <RadioButton
                    android:id="@+id/radioButtonSalida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salida" />

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/TxtResultados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>